*** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***

* SNAPSHOT June 09, 2016
  * Upstream 2016-04-13 .
  * Now, all of binaries are built with ffmpeg-2.8.7 at GNU/Linux,  with ffmpeg-3.0 at Windows.
  * Please read README.ffmpeg.txt .
  * [FM7/Disk] Add exceptions for Xanadu Scenario 2, this has not booted with changes 49dceaca9401d3c6037cb51ec013ca032ff0e83c .
  * Build with 64df71cd492be91289f883224640f42cace090ed (or later).

-- Jun 09, 2016 05:50:50 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT June 08, 2016
  * Upstream 2016-04-13 .
  * Add movie saver, using libav with x264.
  * Now, all of binaries are built with ffmpeg-3.0.
  * Build with 2142d5c7426e21cfeedbaea0450f238f8b4d7d38 (or later).

-- Jun 08, 2016 07:34:45 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT May 23-2, 2016
  * Win32 binary only RELEASE
  * Fix unable to run with some natibve Windows environment.
  * Build with c1448dc84f5439c7c8931614a8397dbefb6383da .

-- May 24, 2016 22:42:00 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT May 23, 2016
  * Upstream 2016-04-13 .
  * [Win32] Now built with -msse -msse2 . You can run only later than Pentium4 .
  * Move FILEIO:: FIFO:: COMMON:: to libCSPemu_utils .
  * Make OSD:: to inherited by OSD_BASE:: .
  * [Win32] Disable LINKFLAGS with "-static-libgcc -static-libstdc++" to reduce size of executions, now, bundled libstc++ is for gcc-5 .
  * [Win32/Build] Support build with MSYS2 (but not display because MSYS2's Qt was build without OpenGL).
  * [Linux] Build shared libraries with Link-Time-Optimize, reduce size of libs.
  * [X1/VM] Configurable buttons for X1/Turbo/Turbo Z.
  * [FM7/FDC] Set MB8877_NO_BUSY_AFTER_SEEK. Fixed unable to boot OS0. Thanks to Anna_Wu.
  * [FM77AV/MB61VH010] ALULINE: Reduce CPU usage (at delta X > delta Y).
  * [UI/Qt/DRAW] Fix crash sometimes when exit emulator.
  * Build with 1c1ddc85dfa7456b1ce48662c2e2930dcc4fc9d8 (or later).
