@@ -1,7 +1,7 @@
 <B><FONT SIZE=-1>Upstream 2016-04-13<BR>
-Qt Port and FM7 series 2016-06-09<BR>
-libCSPavio 1.2.0<BR>
-libCSPgui 1.3.2<BR>
-libCSPosd 1.2.1<BR>
+Qt Port and FM7 series 2016-06-11<BR>
+libCSPavio 1.2.1<BR>
+libCSPgui 1.3.3<BR>
+libCSPosd 1.2.2<BR>
 libCSPemu_utils 1.0.1<BR>
 </FONT></B>
