@@ -9,12 +9,12 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-04-13<BR>
-Qt Port and FM7 series 2016-06-09<BR>
-libCSPavio 1.2.0<BR>
-libCSPgui 1.3.2<BR>
-libCSPosd 1.2.1<BR>
+Qt Port and FM7 series 2016-06-11<BR>
+libCSPavio 1.2.1<BR>
+libCSPgui 1.3.3<BR>
+libCSPosd 1.2.2<BR>
 libCSPemu_utils 1.0.1<BR>
-Build Version: b10935053131ba172f24e771cb9e629467817663<BR>
+Build Version: f8677cf9bb13ba54de48de5122e302a994ef82f3<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -66,5 +66,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Mon 23 May, 2016 02:29:52<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat 11 June, 2016 04:13:15<!-- hhmts end -->
 </body> </html>
