@@ -1,5 +1,16 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
+* SNAPSHOT June 11, 2016
+  * Upstream 2016-04-13 .
+  * Use osdn.jp to distibute binaries.
+    https://osdn.jp/projects/csp-qt .
+  * [MOVIE_SAVER] Use ffmpeg internal aac codec, because faac or fdk_aac are not *Free* .
+  * [VM/MOVIE_SAVER] Fix stopping when changing cartridge, now refer to upstream (split movies).
+  * [Qt/Win32] Fix not work with WindowsXP, using homebrew version of ffmpeg-2.8.7.
+  * Build with f8677cf9bb13ba54de48de5122e302a994ef82f3 (or later).
+  
+-- Jun 11, 2016 04:12:25 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
 * SNAPSHOT June 09, 2016
   * Upstream 2016-04-13 .
   * Now, all of binaries are built with ffmpeg-2.8.7 at GNU/Linux,  with ffmpeg-3.0 at Windows.
